--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}سیستم مدیریت انبار{% endblock %}</title>
+    <title>{% block title %}سامانه سفارش انبار شیرینی بی بی{% endblock %}</title>
     {% load static %}
     {% load workflow_filters %}
     <!-- Bootstrap RTL CSS -->
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'dashboard' %}">سیستم مدیریت انبار</a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}">سامانه سفارش انبار شیرینی بی بی</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
